--- a/app/views/layouts/images.html.erb
+++ b/app/views/layouts/images.html.erb
@@ -7,6 +7,7 @@
   <title>Images: <%= controller.action_name %></title>
   <%= stylesheet_link_tag 'scaffold' %>
   <%= javascript_include_tag "jquery" %>
+  <%= javascript_include_tag "qtip" %>
 </head>
 <body>
 
