--- a/app/views/layouts/images.html.erb
+++ b/app/views/layouts/images.html.erb
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Web App</title>
+  <title>Imgur Directory Listing</title>
   <%= stylesheet_link_tag "web_app_theme", "web_app_theme_override", "themes/default/style", :cache => true %>
   <%= javascript_include_tag "jquery" %>
   <%= javascript_include_tag "qtip" %>
@@ -10,7 +10,7 @@
 <body>
   <div id="container">
     <div id="header">
-      <h1><a href="/">Web App</a></h1>
+      <h1><a href="/">Imgur Directory Listing</a></h1>
       <div id="main-navigation">
         <ul class="wat-cf"></ul>
       </div>
