--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,21 +1,21 @@
 <div class="block">
   <div class="secondary-navigation">
     <ul class="wat-cf">
-      <li class="first active"><%= link_to "#{t("web-app-theme.list", :default => "List")}", images_path  %></li>
-      <li><%= link_to "#{t("web-app-theme.new", :default => "New")}", "#" %></li>
+      <li class="first active"><%= link_to "#{t("web-app-theme.list", :default => "All images")}", images_path  %></li>
+      <!-- <li><%= link_to "#{t("web-app-theme.new", :default => "New")}", "#" %></li>-->
     </ul>
   </div>          
-  <div class="content">          
-    <h2 class="title"><%= t("web-app-theme.all", :default => "All")  %> Images</h2>
+  <div class="content">         
+	  <!-- <h2 class="title"><%= t("web-app-theme.all", :default => "All")  %> Images</h2>-->
     <div class="inner">
       <table class="table">
-        <tr>             
-          <th class="first">ID</th>
-                    <th>
-            <%= t("activerecord.attributes.image.name", :default => t("activerecord.labels.name", :default => "Name")) %>
-          </th>
-                    <th class="last"><%= t("web-app-theme.created_at", :default => "Created at")  %></th>
-        </tr>
+<%#        <tr>             %>
+          <%#<th class="first">ID</th>%>
+                    <%#<th>%>
+            <%#<%= t("activerecord.attributes.image.name", :default => t("activerecord.labels.name", :default => "Name")) %>
+          <%#</th>%>
+                    <%#<th class="last"><%= t("web-app-theme.created_at", :default => "Created at")  </th>%>
+        <%#</tr>%>
         <% @images.each do |image| -%>
         <tr class="<%= cycle("odd", "even") %>">
           <td>
