--- a/app/views/images/_sidebar.html.erb
+++ b/app/views/images/_sidebar.html.erb
@@ -1,7 +1,7 @@
 <div class="block">
   <h3>About</h3>
   <div class="content">
-	<p>If you like the script, it's source is on <%= link_to "github", "http://github.com/Alistra/Imgur-Directory-Listing" %>.</p>
+	<p>If you like the script, its source is on <%= link_to "github", "http://github.com/Alistra/Imgur-Directory-Listing" %>.</p>
   </div>
 </div>
 <div class="block">
