--- a/app/views/images/no_image.erb
+++ b/app/views/images/no_image.erb
@@ -1,2 +1,2 @@
 <% flash[:error] = "These are not the cats you're looking for..." %>
-<center><img src="/cat.jpg"></center>
+<center><img src="images/cat.jpg"></center>
